# xv6-riscv-rs

./: .gitignore  README.md
.github/workflows/: doc.yml
kernel/: Cargo.toml  build.rs  clippy.toml
kernel/.cargo/: config.toml
kernel/asm/: initcode.S
kernel/c/: bio.c  buf.h  defs.h  exec.c  file.c  file.h  fs.c  fs.h  log.c  main.c  pipe.c  printf.c  proc.c  proc.h  riscv.h  sleeplock.c  spinlock.c  spinlock.h  string.c  syscall.c  sysfile.c  sysproc.c  trap.c  vm.c
kernel/src/: alloc.rs  allocator.rs  bitmap.rs  buffer.rs  cache.rs  clock.rs  config.rs  console.rs  context.rs  cpu.rs  elf.rs  entry.rs  exec.rs  file.rs  filesystem.rs  fs.rs  interrupt.rs  kernelvec.rs  lock.rs  log.rs  main.rs  memory_layout.rs  pipe.rs  plic.rs  process.rs  riscv.rs  sleeplock.rs  spinlock.rs  start.rs  swtch.rs  syscall.rs  trampoline.rs  trap.rs  uart.rs  undrop.rs  virtio.rs  vm.rs
kernel/src/filesystem/: buffer.rs  directory_entry.rs  inode.rs  log.rs  stat.rs  superblock.rs
kernel/src/lock/: sleep.rs  spin.rs  spin_c.rs
kernel/src/process/: context.rs  cpu.rs  kernel_stack.rs  memory.rs  mycpu.rs  process.rs  table.rs  trapframe.rs
kernel/src/riscv/: paging.rs
kernel/src/virtio/: disk.rs
xv6/: Makefile
xv6/kernel/: file.h  riscv.h
xv6/user/: init.c  usertests.c
