[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false, features = [] }

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"
opt-level = 3
debug = true
lto = true

[profile.release]
panic = "abort"
opt-level = 3
debug = true
lto = true